src/objects/Solution/Solution.object-meta.xml
<CustomObject>
</CustomObject>