src/objects/Solution/fields/Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft Type</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Platform must be an active platform.</errorMessage>
        <filterItems>
            <field>Platform__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Platform__c</referenceTo>
    <relationshipLabel>Solutions</relationshipLabel>
    <relationshipName>Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>