src/objects/Solution/fields/ATA_Chapter__c.field-meta.xml
<CustomField>
    <fullName>ATA_Chapter__c</fullName>
    <formula>Text( Product_Number__r.ATA_Chapter__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATA Chapter</label>
    <type>Text</type>
</CustomField>