src/objects/Solution/fields/Export_Controlled__c.field-meta.xml
<CustomField>
    <fullName>Export_Controlled__c</fullName>
    <description>Export Controlled or Not</description>
    <inlineHelpText>Does this record contain export controlled information?</inlineHelpText>
    <label>Export Controlled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
                <default>true</default>
                <label>Undetermined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>