src/objects/Solution/fields/Export_Review_By__c.field-meta.xml
<CustomField>
    <fullName>Export_Review_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Export Review By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solutions3</relationshipName>
    <type>Lookup</type>
</CustomField>