src/objects/Solution/fields/Export_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Export_Review_Date__c</fullName>
    <label>Export Review Date</label>
    <type>Date</type>
</CustomField>