src/objects/Solution/fields/FAQ__c.field-meta.xml
<CustomField>
    <fullName>FAQ__c</fullName>
    <inlineHelpText>What is the Question?</inlineHelpText>
    <label>FAQ</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>