src/objects/Solution/fields/Maintenance_Message_Details__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Message_Details__c</fullName>
    <label>Maintenance Message Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>