src/objects/Solution/fields/Orphan_CAS_Maintenance_Message__c.field-meta.xml
<CustomField>
    <fullName>Orphan_CAS_Maintenance_Message__c</fullName>
    <inlineHelpText>Note: No associated CAS or Maintenance Message.</inlineHelpText>
    <label>Orphan CAS/Maintenance Message</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Message__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>