src/objects/Solution/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Platform</label>
    <referenceTo>Platform__c</referenceTo>
    <relationshipLabel>Solutions (Platform)</relationshipLabel>
    <relationshipName>Solutions1</relationshipName>
    <type>Lookup</type>
</CustomField>