src/objects/Solution/fields/Publish_External__c.field-meta.xml
<CustomField>
    <fullName>Publish_External__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publish External</label>
    <type>Checkbox</type>
</CustomField>