src/objects/Solution/fields/Secure_Notes__c.field-meta.xml
<CustomField>
    <fullName>Secure_Notes__c</fullName>
    <description>Secure Notes</description>
    <label>Secure Notes</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>