src/objects/Solution/fields/Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>Solution_Type__c</fullName>
    <formula>IF( Video__c = True, &quot;Video&quot;, &quot;Solution&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution Type</label>
    <type>Text</type>
</CustomField>