src/objects/Solution/fields/Supported_Product__c.field-meta.xml
<CustomField>
    <fullName>Supported_Product__c</fullName>
    <label>Supported Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Catalog_Product_Group__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ACARS MU</fullName>
            </value>
            <value>
                <fullName>ADAHRS/AHRS</fullName>
            </value>
            <value>
                <fullName>ADAHRS - Bendix King</fullName>
            </value>
            <value>
                <fullName>ADC/DADC (Digital Air Data Computer)</fullName>
            </value>
            <value>
                <fullName>ADF, Primus II/EPIC</fullName>
            </value>
            <value>
                <fullName>ADF DFA-74X</fullName>
            </value>
            <value>
                <fullName>ADIRS</fullName>
            </value>
            <value>
                <fullName>ADIRU</fullName>
            </value>
            <value>
                <fullName>AESS</fullName>
            </value>
            <value>
                <fullName>AFIS</fullName>
            </value>
            <value>
                <fullName>AHRS</fullName>
            </value>
            <value>
                <fullName>Aircraft Personality Module</fullName>
            </value>
            <value>
                <fullName>Airframe Hydraulics</fullName>
            </value>
            <value>
                <fullName>Airplane Information Management System (AIMS)</fullName>
            </value>
            <value>
                <fullName>AirSat 1</fullName>
            </value>
            <value>
                <fullName>Air Traffic Services</fullName>
            </value>
            <value>
                <fullName>Air Turbine Starter</fullName>
            </value>
            <value>
                <fullName>AL/Ex / SPEX / ISS</fullName>
            </value>
            <value>
                <fullName>ALF502 Engine</fullName>
            </value>
            <value>
                <fullName>Anti-Ice Valves - ATR</fullName>
            </value>
            <value>
                <fullName>Anti-Ice Valves - BGA</fullName>
            </value>
            <value>
                <fullName>AOG Lease / Engine Rental Bank</fullName>
            </value>
            <value>
                <fullName>APEX Pilatus</fullName>
            </value>
            <value>
                <fullName>APU - 100-2/-3/-135</fullName>
            </value>
            <value>
                <fullName>APU - 131-9A</fullName>
            </value>
            <value>
                <fullName>APU - 131-9B</fullName>
            </value>
            <value>
                <fullName>APU - 131-9C</fullName>
            </value>
            <value>
                <fullName>APU - 131-9D</fullName>
            </value>
            <value>
                <fullName>APU - 131-9J/JC</fullName>
            </value>
            <value>
                <fullName>APU - 165-1/-2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>