src/objects/Solution/fields/Supported_Products__c.field-meta.xml
<CustomField>
    <fullName>Supported_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supported Products</label>
    <referenceTo>Supported_Products__c</referenceTo>
    <relationshipLabel>Solutions</relationshipLabel>
    <relationshipName>Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>