src/objects/Solution/fields/Top_Level_Software__c.field-meta.xml
<CustomField>
    <fullName>Top_Level_Software__c</fullName>
    <label>Top Level Software</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F900LX (L22.4) Top Level SW</fullName>
            </value>
            <value>
                <fullName>F900EX EASy II L24.2 Top Level SW</fullName>
            </value>
            <value>
                <fullName>F900EX Step 3+ L21 Top Level SW</fullName>
            </value>
            <value>
                <fullName>F900EX EASy II L26 Top Level SW</fullName>
            </value>
            <value>
                <fullName>F2000EX AGM2 (L14.2) Top Level SW</fullName>
            </value>
            <value>
                <fullName>F2000EX Step 3 (L14.4) Top Level SW</fullName>
            </value>
            <value>
                <fullName>F2000EX Step 3 (L12) Top Level SW</fullName>
            </value>
            <value>
                <fullName>F2000EX EASy II (L16) Top Level SW</fullName>
            </value>
            <value>
                <fullName>F7X Load 10 Top Level SW</fullName>
            </value>
            <value>
                <fullName>F7X Load 10.2 Top Level SW</fullName>
            </value>
            <value>
                <fullName>F7X EASy II Top Level SW</fullName>
            </value>
            <value>
                <fullName>EMB-170 Load 21.4 Top Level SW</fullName>
            </value>
            <value>
                <fullName>EMB-170 Load 21.5 Top Level SW</fullName>
            </value>
            <value>
                <fullName>EMB-170 Load 23.1 Top Level SW</fullName>
            </value>
            <value>
                <fullName>EMB-170 Load 23.2 Top Level SW</fullName>
            </value>
            <value>
                <fullName>EMB-170 Load 25.2 Top Level SW</fullName>
            </value>
            <value>
                <fullName>EMB-170 Load 25.1 Top Level SW</fullName>
            </value>
            <value>
                <fullName>EMB-170 Load 25.3 Top Level SW</fullName>
            </value>
            <value>
                <fullName>EMB-170 Load 25.4 Top Level SW</fullName>
            </value>
            <value>
                <fullName>EMB-190 Load 21.5 Top Level SW</fullName>
            </value>
            <value>
                <fullName>EMB-190 Load 21.4 Top Level SW</fullName>
            </value>
            <value>
                <fullName>EMB-190 Load 23.1 Top Level SW</fullName>
            </value>
            <value>
                <fullName>EMB-190 Load 23.2 Top Level SW</fullName>
            </value>
            <value>
                <fullName>Sovereign Phase 4 Top Level SW</fullName>
            </value>
            <value>
                <fullName>Sovereign Phase 5 Top Level SW</fullName>
            </value>
            <value>
                <fullName>Sovereign Phase 5.2 Top Level SW</fullName>
            </value>
            <value>
                <fullName>AW139 Phase 4 Top Level SW</fullName>
            </value>
            <value>
                <fullName>AW139 Phase 5 Top Level SW</fullName>
            </value>
            <value>
                <fullName>AW139 Phase 6 Top Level SW</fullName>
            </value>
            <value>
                <fullName>AW139 Phase 7 Top Level SW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>