src/objects/Solution/recordTypes/ACT_Solution.recordType-meta.xml
<RecordType>
    <fullName>ACT_Solution</fullName>
    <active>true</active>
    <businessProcess>ACT Solution</businessProcess>
    <label>ACT Solution</label>
</RecordType>