src/objects/Solution/recordTypes/Contracts_and_Services.recordType-meta.xml
<RecordType>
    <fullName>Contracts_and_Services</fullName>
    <active>true</active>
    <businessProcess>Serv_GDC Flight Ops Solution</businessProcess>
    <label>Contracts and Services</label>
</RecordType>