src/objects/Solution/recordTypes/EPIC_CAS_CMC_Repository.recordType-meta.xml
<RecordType>
    <fullName>EPIC_CAS_CMC_Repository</fullName>
    <active>true</active>
    <businessProcess>GSS Solution</businessProcess>
    <description>The EPIC CAS/CMC Repository is for capturing known CAS and CMC maintenance message that are identified as being a nuisance or causing diagnostic issues to the crew or maintenance personal</description>
    <label>EPIC (CAS/CMC Repository)</label>
</RecordType>