src/objects/Solution/recordTypes/FSTM_GSA_Search.recordType-meta.xml
<RecordType>
    <fullName>FSTM_GSA_Search</fullName>
    <active>true</active>
    <businessProcess>FSTM GSA Search</businessProcess>
    <label>FSTM GSA Search</label>
</RecordType>