src/objects/Solution/recordTypes/GSS_Solution.recordType-meta.xml
<RecordType>
    <fullName>GSS_Solution</fullName>
    <active>true</active>
    <businessProcess>GSS Solution</businessProcess>
    <description>GSS Solution based on the ACT Solutions</description>
    <label>GSS Solution</label>
</RecordType>