src/objects/Solution/recordTypes/Serv_GDC_Flight_Ops_Solution.recordType-meta.xml
<RecordType>
    <fullName>Serv_GDC_Flight_Ops_Solution</fullName>
    <active>true</active>
    <businessProcess>Serv_GDC Flight Ops Solution</businessProcess>
    <label>GDC Flight Ops Solution</label>
</RecordType>