src/objects/Solution/recordTypes/Solution_CSO_Non_Technical_ReadOnly.recordType-meta.xml
<RecordType>
    <fullName>Solution_CSO_Non_Technical_ReadOnly</fullName>
    <active>true</active>
    <businessProcess>CSO Non Technical Issue</businessProcess>
    <description>CSO Non - Tech Read Only</description>
    <label>Solution CSO Non-Technical (ReadOnly)</label>
</RecordType>