src/objects/Solution/recordTypes/Solution_CSO_Nontechnical.recordType-meta.xml
<RecordType>
    <fullName>Solution_CSO_Nontechnical</fullName>
    <active>true</active>
    <businessProcess>CSO Non Technical Issue</businessProcess>
    <description>Information on how to perform tasks, transfer calls, solve problems, and make decisions.</description>
    <label>Solution CSO Non-Technical</label>
</RecordType>