src/objects/Solution/recordTypes/Solution_GTO_Technical.recordType-meta.xml
<RecordType>
    <fullName>Solution_GTO_Technical</fullName>
    <active>true</active>
    <businessProcess>GTO Technical Issue</businessProcess>
    <description>An answer to a technical question. It may either specifically answer the question directly or lead a person in the direction of getting an answer to the technical inquiry.</description>
    <label>Solution GTO Technical</label>
</RecordType>