src/objects/Solution/recordTypes/Solution_GTO_Technical_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Solution_GTO_Technical_Read_Only</fullName>
    <active>true</active>
    <businessProcess>GTO Technical Issue Admin</businessProcess>
    <description>Solution GTO Technical Read Only</description>
    <label>Solution GTO Technical (Read Only)</label>
</RecordType>