src/objects/Solution/recordTypes/Solution_Training.recordType-meta.xml
<RecordType>
    <fullName>Solution_Training</fullName>
    <active>true</active>
    <businessProcess>Solution Training</businessProcess>
    <label>Solution Training</label>
</RecordType>