src/objects/Solution/validationRules/Act_Solution_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Act_Solution_Approval</fullName>
    <active>true</active>
    <description>Solution can be approved by CSO Business Admin and CSO Solution Manager.</description>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp; ISPICKVAL(Status,&apos;Approved&apos;) &amp;&amp; ( $RecordType.Name = &apos;ACT Solution&apos;) &amp;&amp; (
   $Profile.Name !=&apos;CSO Solutions Manager (US)&apos; &amp;&amp;  $Profile.Name !=&apos;CSO Busines Admin (US)&apos; &amp;&amp; $Profile.Name !=&apos;Honeywell System Administrator&apos; &amp;&amp; $Profile.Name !=&apos;System Administrator&apos; &amp;&amp; $Profile.Name !=&apos;Honeywell System Administrator (US)&apos;)</errorConditionFormula>
    <errorMessage>Act Solution can approved only by CSO Business Admin and CSO Solution Manager.</errorMessage>
</ValidationRule>