src/objects/Solution/validationRules/Audit_Frequency_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Audit_Frequency_is_mandatory</fullName>
    <active>true</active>
    <description>When the status is changed to Final review for CSO and Technical review for GTO then audit frequency field should be mandatory.</description>
    <errorConditionFormula>AND( OR(AND( Record_Type_Name__c =&quot;Solution GTO Technical&quot;, text(Status)=&quot;Approved&quot; ),AND( Record_Type_Name__c =&quot;Solution CSO Non-Technical&quot;,text(Status)=&quot;Approved&quot;)), ISBLANK(TEXT(Audit_Frequency__c )), ISNULL(Expiration_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Audit_Frequency__c</errorDisplayField>
    <errorMessage>Please Enter a value for the Audit Frequency</errorMessage>
</ValidationRule>