src/objects/Solution/validationRules/Cannot_Change_Status_as_Back_to_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Status_as_Back_to_Draft</fullName>
    <active>true</active>
    <description>Cannot_Change_Status_as_Back_to_Draft Unless Admin</description>
    <errorConditionFormula>AND (  ISCHANGED(Status) , ISPICKVAL(Status , &apos;Draft&apos;)   ) 



&amp;&amp;
or( $RecordType.Name =&apos;Solution GTO Technical&apos;,
 $RecordType.Name =&apos;Solution GTO Technical (Read Only)&apos;)



&amp;&amp;  $Profile.Name !=&apos;GTO Business Admin (Non US)&apos; &amp;&amp;
  $Profile.Name !=&apos;GTO Business Admin (US)&apos;  &amp;&amp;

  $Profile.Name !=&apos;System Administrator&apos;</errorConditionFormula>
    <errorMessage>Only Admins Can Update the Status Back To Draft</errorMessage>
</ValidationRule>