src/objects/Solution/validationRules/Cannot_Edit_Approved_Solution.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Approved_Solution</fullName>
    <active>true</active>
    <errorConditionFormula>($RecordType.DeveloperName =&apos;Solution_CSO_Non_Technical_ReadOnly&apos; ||
$RecordType.DeveloperName =&apos;Solution_GTO_Technical_Read_Only&apos;) &amp;&amp; (ISCHANGED(Status) || ISCHANGED(SolutionName) ) &amp;&amp;

not(ispickval(Status,&apos;Back to Draft&apos;) || ispickval(Status,&apos;Draft&apos;))</errorConditionFormula>
    <errorDisplayField>Aircraft_Type__c</errorDisplayField>
    <errorMessage>You cannot edit an Approved Solution</errorMessage>
</ValidationRule>