src/objects/Solution/validationRules/CAS_CMC_Repository_Approver_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CAS_CMC_Repository_Approver_Validation</fullName>
    <active>true</active>
    <description>All records belonging to EPIC (CAS/CMC Repository) will be approved only by Richard Van Riper or by John Dano.</description>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp; ISPICKVAL(Status,&apos;Approved&apos;) &amp;&amp; ( $RecordType.Name = &apos;EPIC (CAS/CMC Repository)&apos;) &amp;&amp; (
$User.Alias !=&apos;RVan Ri&apos; &amp;&amp; $User.Alias!=&apos;Dano&apos;&amp;&amp; $Profile.Name !=&apos;Honeywell System Administrator&apos; &amp;&amp; $Profile.Name !=&apos;System Administrator&apos; &amp;&amp; $Profile.Name !=&apos;Honeywell System Administrator (US)&apos;)</errorConditionFormula>
    <errorMessage>All EPIC (CAS/CMC Repository) records will be approved by Richard Van Riper or John Dano.</errorMessage>
</ValidationRule>