src/objects/Solution/validationRules/CSO_Validation_for_selecting_status.validationRule-meta.xml
<ValidationRule>
    <fullName>CSO_Validation_for_selecting_status</fullName>
    <active>true</active>
    <description>CSO_Validation_for_selecting_status_for Creator</description>
    <errorConditionFormula>AND (CreatedBy.Id== $User.Id,   ISCHANGED(Status) ,NOT(  ISPICKVAL(Status , &apos;Content Review&apos;)  || ISPICKVAL(Status , &apos;Final Review&apos;) ||  ISPICKVAL(Status , &apos;Draft&apos;) || ISPICKVAL(Status , &apos;Cancelled&apos;) ) ,Record_Type_Name__c=&apos;Solution CSO Non-Technical&apos;)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Please select Content Review or Final Review only</errorMessage>
</ValidationRule>