src/objects/Solution/validationRules/Enter_Reason_For_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Reason_For_Update</fullName>
    <active>true</active>
    <description>Enter Reason For Update</description>
    <errorConditionFormula>Back_To_Draft__c ==true  &amp;&amp; isblank( Reason_for_Update__c ) &amp;&amp;

(  Record_Type_Name__c=&apos;Solution CSO Non-Technical&apos; ||

Record_Type_Name__c=&apos;Solution CSO Non-Technical (ReadOnly)&apos;)</errorConditionFormula>
    <errorDisplayField>Reason_for_Update__c</errorDisplayField>
    <errorMessage>Enter Reason For Update</errorMessage>
</ValidationRule>