src/objects/Solution/validationRules/Enter_Secure_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Secure_Notes</fullName>
    <active>true</active>
    <description>If Compliance Selected as Yes, Secure Notes should be entered</description>
    <errorConditionFormula>text(Export_Controlled__c) =&apos;Yes&apos; &amp;&amp;  Secure_Notes__c ==null</errorConditionFormula>
    <errorDisplayField>Secure_Notes__c</errorDisplayField>
    <errorMessage>Please Enter Secure Notes</errorMessage>
</ValidationRule>