src/objects/Solution/validationRules/GSS_Solution_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>GSS_Solution_Approval</fullName>
    <active>true</active>
    <description>Solution can be approved by Thomas Nieter, Mike Zusi, Carol Grace, and Brad McCool.</description>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp; ISPICKVAL(Status,&apos;Approved&apos;) &amp;&amp; ( $RecordType.Name = &apos;GSS Solution&apos;) &amp;&amp; (
   $User.Alias !=&apos;Grace&apos; &amp;&amp;   $User.Alias!=&apos;McCool&apos; &amp;&amp;   $User.Alias!=&apos;Nieter&apos; &amp;&amp;   $User.Alias !=&apos;Zusi&apos; &amp;&amp; $Profile.Name !=&apos;Honeywell System Administrator&apos; &amp;&amp; $Profile.Name !=&apos;System Administrator&apos; &amp;&amp; $Profile.Name !=&apos;Honeywell System Administrator (US)&apos;)</errorConditionFormula>
    <errorMessage>GSS Solution can approved only by Thomas Nieter, Mike Zusi, Carol Grace, and Brad McCool.</errorMessage>
</ValidationRule>