src/objects/Solution/validationRules/GTO_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>GTO_Validation_Rule</fullName>
    <active>true</active>
    <description>GTO_Validation_Rule</description>
    <errorConditionFormula>AND (CreatedBy.Id== $User.Id,   ISCHANGED(Status) ,NOT(  ISPICKVAL(Status , &apos;Standards Review&apos;)  || ISPICKVAL(Status , &apos;Technical Review&apos;)  || ISPICKVAL(Status , &apos;Cancelled&apos;) ) 

)

&amp;&amp;



or( $RecordType.Name =&apos;Solution GTO Technical&apos;,
 $RecordType.Name =&apos;Solution GTO Technical (Read Only)&apos;)



&amp;&amp;  $Profile.Name !=&apos;GTO Business Admin (Non US)&apos; &amp;&amp;
  $Profile.Name !=&apos;GTO Business Admin (US)&apos;  &amp;&amp;

  $Profile.Name !=&apos;System Administrator&apos;


&amp;&amp;

  $Profile.Name !=&apos;Honeywell System Administrator&apos;</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You can set the status to Standards Review or Technical Review only</errorMessage>
</ValidationRule>