src/objects/Solution/validationRules/Make_Export_Review_By_Field_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_Export_Review_By_Field_Mandatory</fullName>
    <active>true</active>
    <description>Make  Export Review By fields mandatory, if Publish External checkbox has been selected</description>
    <errorConditionFormula>(Publish_External__c == true &amp;&amp;   Export_Review_By__c ==null)</errorConditionFormula>
    <errorDisplayField>Export_Review_By__c</errorDisplayField>
    <errorMessage>You must enter a value !</errorMessage>
</ValidationRule>