src/objects/Solution/validationRules/Make_Export_Review_Date_Field_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_Export_Review_Date_Field_Mandatory</fullName>
    <active>true</active>
    <description>Make Export Review Date field mandatory, if Publish External checkbox has been selected</description>
    <errorConditionFormula>(Publish_External__c == true  &amp;&amp;  ISBLANK(  Export_Review_Date__c  ) )</errorConditionFormula>
    <errorDisplayField>Export_Review_Date__c</errorDisplayField>
    <errorMessage>You must enter a value !</errorMessage>
</ValidationRule>