src/objects/Solution/validationRules/Mandate_Fields_Approved_By.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_Fields_Approved_By</fullName>
    <active>false</active>
    <description>Mandate_Fields_Approved_By</description>
    <errorConditionFormula>AND(
ispickval( Status ,&apos;Approved&apos;),
OR(ISBLANK(Intellectual_Property_Review_By__c), ISBLANK(Intellectual_Property_Review_Date__c) , ISBLANK(Export_Review_By__c) ,ISBLANK(Export_Review_Date__c) ))</errorConditionFormula>
    <errorMessage>Intellectual Property Review By and Review Date, Export Review By and Review Date are Mandatory information to be filled.</errorMessage>
</ValidationRule>