src/objects/Solution/validationRules/Only_Approvers_Can_Approve_the_Solution.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Approvers_Can_Approve_the_Solution</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp; ISPICKVAL(Status , &apos;Approved&apos;)

&amp;&amp;

or(

(    UPPER( $User.EmployeeNumber)  !=  UPPER( Current_Approver_EID__c )  ) ,

isnull(Current_Approver__c))


&amp;&amp;

or( $RecordType.Name =&apos;Solution GTO Technical&apos;,
$RecordType.Name =&apos;Solution GTO Technical (Read Only)&apos;)


&amp;&amp;

$Profile.Name !=&apos;System Administrator&apos;

&amp;&amp;

$Profile.Name !=&apos;Honeywell System Administrator&apos;</errorConditionFormula>
    <errorMessage>Only Primary/Secondary can Approve the Solution</errorMessage>
</ValidationRule>