src/objects/Solution/validationRules/Public_External.validationRule-meta.xml
<ValidationRule>
    <fullName>Public_External</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Publish_External__c , ISBLANK( Intellectual_Property_Review_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Intellectual_Property_Review_Date__c</errorDisplayField>
    <errorMessage>Intellectual Property Review Date Required only if the Publish External checkbox is selected</errorMessage>
</ValidationRule>