src/objects/Solution/validationRules/PublicExternal.validationRule-meta.xml
<ValidationRule>
    <fullName>PublicExternal</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Publish_External__c , ISBLANK( Intellectual_Property_Review_By__c ) )</errorConditionFormula>
    <errorDisplayField>Intellectual_Property_Review_By__c</errorDisplayField>
    <errorMessage>Intellectual Property Review By Required only if the Publish External checkbox is selected</errorMessage>
</ValidationRule>