src/objects/Solution/listViews/ACT_Solution.listView-meta.xml
<ListView>
    <fullName>ACT_Solution</fullName>
    <columns>SOLUTION.ISSUE</columns>
    <columns>SOLUTION.SOLUTION_NUMBER</columns>
    <columns>SOLUTION.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>SOLUTION.TIMES_USED</columns>
    <columns>SOLUTION.LAST_UPDATE</columns>
    <columns>Record_Type_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>ACT Solution</value>
    </filters>
    <label>ACT Solution</label>
</ListView>