src/objects/Solution/listViews/All_Solutions.listView-meta.xml
<ListView>
    <fullName>All_Solutions</fullName>
    <columns>SOLUTION.SOLUTION_NUMBER</columns>
    <columns>SOLUTION.ISSUE</columns>
    <columns>SOLUTION.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>SOLUTION.TIMES_USED</columns>
    <columns>SOLUTION.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SOLUTION.STATUS</field>
        <operation>notContain</operation>
        <value>Cancelled,Rejected</value>
    </filters>
    <label>My Solutions</label>
    <language>en_US</language>
</ListView>