src/objects/Solution/listViews/CSO_Non_Technical_Drafts.listView-meta.xml
<ListView>
    <fullName>CSO_Non_Technical_Drafts</fullName>
    <columns>SOLUTION.ISSUE</columns>
    <columns>SOLUTION.SOLUTION_NUMBER</columns>
    <columns>SOLUTION.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>SOLUTION.TIMES_USED</columns>
    <columns>SOLUTION.LAST_UPDATE</columns>
    <columns>SOLUTION.RECORDTYPE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SOLUTION.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Solution.Solution_CSO_Nontechnical,Solution.Solution_CSO_Non_Technical_ReadOnly</value>
    </filters>
    <filters>
        <field>SOLUTION.STATUS</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>CSO Non-Technical - Drafts</label>
</ListView>